Take header height into account in the main page masthead; avoid margin collapsing.

--- a/services/web/public/stylesheets/app/homepage.less
+++ b/services/web/public/stylesheets/app/homepage.less
@@ -1,10 +1,13 @@
 .masthead {
+	display: inline-block;
+	width: 100%;
 	background-color: rgba(0,0,0,0.85);
 	background-image: -webkit-linear-gradient(left,rgba(153,93,179,0.6),rgba(44,155,219,0.6));
 	background-image: linear-gradient(to right,rgba(153,93,179,0.6),rgba(44,155,219,0.6));
 	position: relative;
 	text-align: center;
 	overflow: hidden;
+	margin-top: @header-height;
 	h1, p, label {
 		color: white;
 		text-align: center;
